--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "lint": "npx --no-install prettier --check 'src/**/*.{js,ts}'",
-    "lintfix": "npx --no-install prettier --write 'src/**/*.{js,ts}'",
+    "lint": "npx --no-install prettier --check 'src/**/*.{js,ts}' 'cli/**/*.{js,ts}'",
+    "lintfix": "npx --no-install prettier --write 'src/**/*.{js,ts}' 'cli/**/*.{js,ts}'",
     "eslint": "eslint src",
     "test:unit": "jest",
     "test": "npm run lint && npm run build && npm run test:unit",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "cli": "ts-node cli/main.ts"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -30,10 +31,12 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "colors": "^1.4.0",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.25.3",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "nock": "^13.2.1",
     "nodemon": "^2.0.15",
@@ -41,6 +44,11 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "make lint"
+    }
   },
   "jest": {
     "transform": {
